--- a/frontend/templates/frontend/layout/header.html
+++ b/frontend/templates/frontend/layout/header.html
@@ -1,1 +1,18 @@
-<h1>Header</h1>
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+
+    <div class="container-fluid">
+
+        <a href="{% url 'home' %}" class="navbar-brand">Weather Jungle</a>
+
+
+
+        <form class="d-flex" method="POST">
+            {% csrf_token %}
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="location">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+
+
+    </div>
+
+</nav>
