--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'frontend/layout/app.html' %}
 
-</body>
-</html>
+{% block title %}
+
+Home
+
+{% endblock %}
+
+
+{% block content %}
+
+
+
+{% endblock %}
